--- a/tox.ini
+++ b/tox.ini
@@ -31,6 +31,7 @@ commands =
 
 [testenv:py39]
 commands =
+    coverage run -m unittest discover -s test -b {posargs}
     coverage run -a -m pytest --doctest-modules --pyargs gada_compose {posargs}
 
 [testenv:end]
